@@ -166,16 +166,4 @@ test.run(arguments = 'f1.out',
 
 test.up_to_date(arguments = 'f1.out')
 
-test.write('SConstruct', """
-env=Environment()
-TargetSignatures('content')
-env.Alias('C', 'D')
-env.Alias('B', 'C')
-env.Alias('A', 'B')
-""")
-
-test.run(arguments='A',
-         stderr="scons: \\*\\*\\* Source `D' not found, needed by target `C'.  Stop.\n",
-         status=2)
-
 test.pass_test()
