@@ -124,6 +124,9 @@ RELEASE 0.97 - XXX
     to extend() list, so Python 1.5.2 doesn't get pretty-printing of Node
     lists, but everything should still function.)
 
+  - Allow Aliases to have actions that will be executed whenever
+    any of the expanded Alias targets are out of date.
+
   From Wayne Lee:
 
   - Avoid "maximum recursion limit" errors when removing $(-$) pairs
